[package]
name = "CentralLayer"
edition = "2024"

[dependencies]
borsh = "1.5.7"
bs58 = "0.5.1"
dotenv = "0.15.0"
primitive-types = "0.13.1"
rand = "0.9.1"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status-client-types = "2.2.7"
spl-associated-token-account = "7.0.0"
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
