[package]
name = "solana_central"
edition = "2024"

[dependencies]
borsh = "1.6.0"
bs58 = "0.5.1"
futures = "0.3.31"
primitive-types = "0.14.0"
rand = "0.9.2"
solana-account-decoder = "3.1.2"
solana-client = "3.1.2"
solana-sdk = "3.0.0"
solana-transaction-status-client-types = "3.1.2"
spl-associated-token-account = "8.0.0"
